<resources>
    <string name="app_name">Sleep</string>
    <string name="welcome_to_sleep">Welcome to Sleep</string>
    <string name="get_started">GET STARTED</string>


    <string name="home">Home</string>
    <string name="Sleep">Sleep</string>
    <string name="meditate">Meditate</string>
    <string name="music">Music</string>
    <string name="afsar">Afsar</string>
    <string name="sleep_stories">Sleep Stories</string>
    <string name="the_ocean_moon">The ocean moon</string>
    <string name="play">Play</string>


</resources>