<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_sleep"
        android:icon="@drawable/ic_sleep"
        android:title="@string/Sleep" />

    <item
        android:id="@+id/navigation_meditate"
        android:icon="@drawable/ic_meditate"
        android:title="@string/meditate" />

    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/ic_music"
        android:title="@string/music" />

    <item
        android:id="@+id/navigation_afsar"
        android:icon="@drawable/ic_afsar"
        android:title="@string/afsar" />

</menu>